--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <table cellspacing ="10">
             <tr>
                 <td>
-                    <img src="Images/low.png" alt="profile pic" height="90" width="145">
+                    <img src="images/low.png" alt="profile pic" height="90" width="145">
                 </td>
                 <td>
                     <h2>Quophi Asafo-Boakye</h2>
