--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 </td>
                 <td>
                     <h2>Quophi Asafo-Boakye</h2>
+                    <p>CEO of WrongIvory Gaming</p>
                     <p><em>HTML and Javascript Beginner Programmer<strong><a href="https://github.com/WrongIvory">from Ghana</a></strong></em></p>
                     <p>I ❤️ Gaming and Coding</p>
                 </td>
