--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <hr>
             <div class="contact-me">
               <h2>Get In Touch</h2>
-              <h3 class="contact-message">If you are in need of any designing of Web Development.</h3>
+              <h3 class="contact-message">If you are in need of any Graphic Designing or Web Development.</h3>
               <a class="btn" href="mailto:kofiasafoboakye@gmail.com">CONTACT ME</a>
             </div>
           </div>
